--- a/Tinkoff Fintech App/Base.lproj/Main.storyboard
+++ b/Tinkoff Fintech App/Base.lproj/Main.storyboard
@@ -1,57 +1,108 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="4ok-MW-a4i">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="4ok-MW-a4i">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Profile View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Tinkoff_Fintech_App" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ProfileViewController" customModule="Tinkoff_Fintech_App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tDv-af-hJ0">
-                                <rect key="frame" x="184" y="460" width="46" height="30"/>
-                                <state key="normal" title="Button"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Danila Dobrorolyubov" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fTC-MC-RMS">
+                                <rect key="frame" x="82" y="347.5" width="211" height="26.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MAI student, IOS Dev, begginer" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fV5-Du-2u8">
+                                <rect key="frame" x="70.5" y="404" width="238" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Moscow, Russia" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7x3-qH-HPT">
+                                <rect key="frame" x="70.5" y="432.5" width="121" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="f6y-us-lRk">
+                                <rect key="frame" x="70.5" y="84" width="234" height="234"/>
+                                <color key="backgroundColor" red="0.89058679340000002" green="0.90760642290000004" blue="0.1654500663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="f6y-us-lRk" secondAttribute="height" multiplier="1:1" id="NNq-3z-bIH"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DD" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="60" translatesAutoresizingMaskIntoConstraints="NO" id="zKQ-GD-Orh">
+                                <rect key="frame" x="92.5" y="106" width="190" height="190"/>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="120"/>
+                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Aq8-em-boW">
+                                <rect key="frame" x="71" y="590" width="234" height="40"/>
+                                <color key="backgroundColor" red="0.96462148430000005" green="0.96475988629999998" blue="0.96459120509999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="8r5-iE-VrN"/>
+                                </constraints>
+                                <state key="normal" title="Edit">
+                                    <color key="titleColor" red="0.65849125389999996" green="0.66278618570000003" blue="0.66270011660000006" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TwF-Df-qXq">
+                                <rect key="frame" x="70.5" y="84" width="234" height="234"/>
                                 <connections>
-                                    <segue destination="heF-uv-TLq" kind="show" id="35a-pD-lbI"/>
+                                    <action selector="imageButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Lj6-Rd-Pyi"/>
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstItem="tDv-af-hJ0" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="OdS-s7-7mF"/>
-                            <constraint firstItem="tDv-af-hJ0" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="PmO-bD-a3M"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="fV5-Du-2u8" firstAttribute="top" secondItem="fTC-MC-RMS" secondAttribute="bottom" constant="30" id="12h-pF-cPD"/>
+                            <constraint firstItem="fTC-MC-RMS" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="6C8-w9-RxR"/>
+                            <constraint firstItem="TwF-Df-qXq" firstAttribute="leading" secondItem="f6y-us-lRk" secondAttribute="leading" id="6Z5-CP-tkS"/>
+                            <constraint firstItem="zKQ-GD-Orh" firstAttribute="top" secondItem="f6y-us-lRk" secondAttribute="top" constant="22" id="A87-n8-h1w"/>
+                            <constraint firstItem="7x3-qH-HPT" firstAttribute="leading" secondItem="fV5-Du-2u8" secondAttribute="leading" id="Frn-Ej-wli"/>
+                            <constraint firstItem="zKQ-GD-Orh" firstAttribute="bottom" secondItem="f6y-us-lRk" secondAttribute="bottom" constant="-22" id="GWO-q8-b1H"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Aq8-em-boW" secondAttribute="bottom" constant="37" id="IOT-FF-5p1"/>
+                            <constraint firstItem="zKQ-GD-Orh" firstAttribute="trailing" secondItem="f6y-us-lRk" secondAttribute="trailing" constant="-22" id="Lpj-Hr-UcZ"/>
+                            <constraint firstItem="Aq8-em-boW" firstAttribute="leading" secondItem="f6y-us-lRk" secondAttribute="leading" id="MYP-XE-orU"/>
+                            <constraint firstItem="TwF-Df-qXq" firstAttribute="trailing" secondItem="f6y-us-lRk" secondAttribute="trailing" id="R79-6l-m1k"/>
+                            <constraint firstItem="fTC-MC-RMS" firstAttribute="top" secondItem="f6y-us-lRk" secondAttribute="bottom" constant="29.5" id="SYT-1b-EKY"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="7x3-qH-HPT" secondAttribute="trailing" constant="20" id="Xz0-kA-4bV"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="fV5-Du-2u8" secondAttribute="trailing" constant="20" id="Z7k-XU-b9E"/>
+                            <constraint firstItem="Aq8-em-boW" firstAttribute="trailing" secondItem="f6y-us-lRk" secondAttribute="trailing" id="bPh-g7-6Dx"/>
+                            <constraint firstItem="7x3-qH-HPT" firstAttribute="top" secondItem="fV5-Du-2u8" secondAttribute="bottom" constant="8" symbolic="YES" id="d6H-1c-acJ"/>
+                            <constraint firstItem="TwF-Df-qXq" firstAttribute="bottom" secondItem="f6y-us-lRk" secondAttribute="bottom" id="e96-Zq-9tf"/>
+                            <constraint firstItem="f6y-us-lRk" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="fWK-vx-hc4"/>
+                            <constraint firstItem="zKQ-GD-Orh" firstAttribute="leading" secondItem="f6y-us-lRk" secondAttribute="leading" constant="22" id="foN-2v-P5V"/>
+                            <constraint firstItem="TwF-Df-qXq" firstAttribute="top" secondItem="f6y-us-lRk" secondAttribute="top" id="icY-YT-xMR"/>
+                            <constraint firstItem="f6y-us-lRk" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.350825" id="puG-M9-Kv1"/>
+                            <constraint firstItem="fV5-Du-2u8" firstAttribute="leading" secondItem="f6y-us-lRk" secondAttribute="leading" id="tYj-de-ex9"/>
+                            <constraint firstItem="f6y-us-lRk" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="z2D-Ss-9zF"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="xdU-vv-b9e"/>
+                    <connections>
+                        <outlet property="editButton" destination="Aq8-em-boW" id="D9T-Vw-7hH"/>
+                        <outlet property="profileImageButton" destination="TwF-Df-qXq" id="DEk-xW-5i9"/>
+                        <outlet property="profileImageView" destination="f6y-us-lRk" id="CqO-ne-Npt"/>
+                        <outlet property="profileLabel" destination="zKQ-GD-Orh" id="cyd-PO-k7f"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1047.8260869565217" y="59.598214285714285"/>
-        </scene>
-        <!--Second View Controller-->
-        <scene sceneID="j9N-c8-nlb">
-            <objects>
-                <viewController modalPresentationStyle="fullScreen" id="heF-uv-TLq" customClass="SecondViewController" customModule="Tinkoff_Fintech_App" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="0iF-ta-e5O">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="rri-ms-3SA"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="iSK-og-cDw"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="pE2-71-SzS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1984.057971014493" y="59.598214285714285"/>
+            <point key="canvasLocation" x="1044" y="58.920539730134934"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="O5R-l4-x0f">
@@ -59,7 +110,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="4ok-MW-a4i" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="SGx-Fz-4wU">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -72,4 +123,9 @@
             <point key="canvasLocation" x="137.68115942028987" y="59.598214285714285"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
